--- a/PrintingHouse.Models/PrintingHouse.Models.csproj
+++ b/PrintingHouse.Models/PrintingHouse.Models.csproj
@@ -54,12 +54,15 @@
     <Compile Include="FoilPrice.cs" />
     <Compile Include="InkPrice.cs" />
     <Compile Include="MachineData.cs" />
+    <Compile Include="MaterialConsumption.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Paper.cs" />
     <Compile Include="PaperPrice.cs" />
     <Compile Include="PlatePrice.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicePrice.cs" />
+    <Compile Include="SetupWaste.cs" />
     <Compile Include="TapePrice.cs" />
     <Compile Include="Town.cs" />
     <Compile Include="WischwasserPrice.cs" />
