--- a/PrintingHouse.Models/PrintingHouse.Models.csproj
+++ b/PrintingHouse.Models/PrintingHouse.Models.csproj
@@ -56,13 +56,14 @@
     <Compile Include="MachineData.cs" />
     <Compile Include="MaterialConsumption.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="OrderCalcPrice.cs" />
     <Compile Include="Paper.cs" />
     <Compile Include="PaperPrice.cs" />
     <Compile Include="PlatePrice.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicePrice.cs" />
-    <Compile Include="SetupWaste.cs" />
+    <Compile Include="PaperWaste.cs" />
     <Compile Include="TapePrice.cs" />
     <Compile Include="Town.cs" />
     <Compile Include="WebSize.cs" />
